# MultiplicativePersistence

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  MultiplicativePersistence.sln  README.md
MultiplicativePersistence/: Main.c  MultiplicativePersistence.vcxproj  MultiplicativePersistence.vcxproj.filters  Number.c  Number.h
src/: Main.c  Number.c  Number.h
